--- a/final/force-app/main/default/classes/LadaCarController.cls
+++ b/final/force-app/main/default/classes/LadaCarController.cls
@@ -8,17 +8,17 @@ public without sharing class LadaCarController {
     @AuraEnabled
     public static List<PricebookEntry> getCarsList(String selectedCurrency) {
         CurrencyName_Iso__c settingObject = CurrencyName_Iso__c.getOrgDefaults();
+        selectedCurrency = LadaConstantsManager.AVAILABLE_CURRENCY.contains(selectedCurrency) ? selectedCurrency : settingObject.Selected_Currency__c;
         settingObject.Selected_Currency__c = selectedCurrency;
-        selectedCurrency = LadaConstantsManager.AVAILABLE_CURRENCY.contains(selectedCurrency) ? selectedCurrency : 'USD';
         update settingObject;
         return LadaQueryManager.getCarsListWithPrices(selectedCurrency);
     }
 
-    @AuraEnabled
-    public static List<PricebookEntry> getActualCarList(){
-        List<PricebookEntry> products = LadaQueryManager.getCarsListWithPrices('USD');
-        return products;
-    }
+    // @AuraEnabled
+    // public static List<PricebookEntry> getActualCarList(){
+    //     List<PricebookEntry> products = LadaQueryManager.getCarsListWithPrices('USD');
+    //     return products;
+    // }
 
     @AuraEnabled
     public static String selectProductFamily(String newFamily){
