--- a/final/force-app/main/default/classes/TestBatchUpdateExchangeRate.cls
+++ b/final/force-app/main/default/classes/TestBatchUpdateExchangeRate.cls
@@ -2,18 +2,20 @@
 public with sharing class TestBatchUpdateExchangeRate {
     
     @isTest static void testCorrectUseCase() {
-        List<PricebookEntry> pbEntries = TestDataFactoryLada.createTestProducts(LadaConstantsManager.AVAILABLE_CURRENCY,3);
+        TestDataFactoryLada.createTestProducts(LadaConstantsManager.AVAILABLE_CURRENCY,3);
         Test.setMock(HttpCalloutMock.class, new TestDataFactoryLada()); 
         Test.startTest();
         BatchUpdateExchangeRate testBatchObject = new BatchUpdateExchangeRate();
         testBatchObject.execute(null);
         Test.stopTest();
         System.assertEquals(30,[SELECT count() FROM PricebookEntry]);
-        System.assertEquals(0,testBatchObject.getOriginalPrice('01t5j000000tOjQAAU'),'Original price is wrong!');        
+        System.assertEquals(0,testBatchObject.getOriginalPrice('01t5j000000tOjQAAU'),'getOriginalPrice() doesn\'t work!');
+        PricebookEntry testEntry = [SELECT UnitPrice FROM PricebookEntry WHERE CurrencyIsoCode = 'BYN' AND Pricebook2.Name = 'LADA Cars Price Book' LIMIT 1];
+        System.assertEquals(0, testEntry.UnitPrice);        
     }
 
     @isTest static void testEmptyListOfProducts() {
-        List<PricebookEntry> pbEntries = TestDataFactoryLada.createTestProducts(LadaConstantsManager.AVAILABLE_CURRENCY,0);
+        TestDataFactoryLada.createTestProducts(LadaConstantsManager.AVAILABLE_CURRENCY,0);
         Test.setMock(HttpCalloutMock.class, new TestDataFactoryLada()); 
         Test.startTest();
         BatchUpdateExchangeRate testBatchObject = new BatchUpdateExchangeRate();
@@ -23,7 +25,7 @@ public with sharing class TestBatchUpdateExchangeRate {
     }
 
     @isTest static void testIncorrectHttpResponse() {
-        List<PricebookEntry> pbEntries = TestDataFactoryLada.createTestProducts(LadaConstantsManager.AVAILABLE_CURRENCY,0);
+        TestDataFactoryLada.createTestProducts(LadaConstantsManager.AVAILABLE_CURRENCY,0);
         Test.setMock(HttpCalloutMock.class, new TestIncorrectHttpMock()); 
         Test.startTest();
         BatchUpdateExchangeRate testBatchObject = new BatchUpdateExchangeRate();
